--- a/zad_items.html
+++ b/zad_items.html
@@ -9,11 +9,12 @@
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel='stylesheet'>
    </head>
    <body>
-     
+
       <div class="container">
          <div class="header">
             <div class="logo" > <img src="/Applications/XAMPP/xamppfiles/htdocs/my_auction/my_auction/img/nnn.png" style=" width: 62%;
                height: auto; " align="middle" alt="logo"></div>
+            <div><input type="text" placeholder="Search" class="search_box"/></div>
          </div>
          <div class="menu">
             <ul class="menu_list">
