--- a/signup form.html
+++ b/signup form.html
@@ -2,7 +2,7 @@
 <html lang=Ar>
 
 <head>
-<title> ущми гАйслМА </title>
+<title> О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫О©╫ </title>
 <style>
 body {
     font-family: Verdana,sans-serif;
@@ -32,49 +32,49 @@ nav ul li {
 <body>
 <header>
 <img src="logo.png" width="100" height="100">
-<h1>рго</h1>
+<h1>О©╫О©╫О©╫</h1>
 </header>
 
 <nav>
 <ul>
-  <li><b>ЦйгхзгйМ</b></li>
-  <li><b>гАлоМо</b></li>
-  <li><b>гАЦщжАи</b></li>
+  <li><b>О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫</b></li>
+  <li><b>О©╫О©╫О©╫О©╫О©╫О©╫</b></li>
+  <li><b>О©╫О©╫О©╫О©╫О©╫О©╫О©╫</b></li>
 </ul>
 </nav>
 
 <!DOCTYPE html>
 <html lang=Ar>
 <body style="text-align:right;">
-йслМА мсгх лоМо
+О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫
 <br><br>
 <form action="/action_page.php">
-  гАгсЦ гАцФА:<br>
-  <input type="text" name="firstname" value="цмЦо" style="text-align:right;">
+  О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫:<br>
+  <input type="text" name="firstname" value="О©╫О©╫О©╫О©╫" style="text-align:right;">
   <br>
-  гАгсЦ гАцнМя:<br>
-  <input type="text" name="lastname" value="ЦмЦо" style="text-align:right;">
+  О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫:<br>
+  <input type="text" name="lastname" value="О©╫О©╫О©╫О©╫" style="text-align:right;">
   <br>
-  гсЦ гАЦсйноЦ:<br>
-  <input type="text" name="username" value="цмЦо_ЦмЦо" style="text-align:right;">
+  О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫:<br>
+  <input type="text" name="username" value="О©╫О©╫О©╫О©╫_О©╫О©╫О©╫О©╫" style="text-align:right;">
   <br>
-  гАеМЦМА:<br>
+  О©╫О©╫О©╫О©╫О©╫О©╫О©╫:<br>
   <input type="text" name="email" value="ahmed@ahmed.com" style="text-align:right;">
   <br>
-  гАЦоМДи:<br>
-  <input type="text" name="city" value="Цъи" style="text-align:right;">
+  О©╫О©╫О©╫О©╫О©╫О©╫О©╫:<br>
+  <input type="text" name="city" value="О©╫О©╫О©╫" style="text-align:right;">
   <br>
-  ячЦ гАлФгА:<br>
+  О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫:<br>
   <input type="text" name="mobilenum" value="1234567890" style="text-align:right;">
   <br>
-  гАячЦ гАсяМ:<br>
+  О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫:<br>
   <input type="text" name="password" value="Mickey" style="text-align:right;">
   <br>
-  йцъМо гАячЦ гАсяМ:<br>
+  О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫:<br>
   <input type="text" name="passwordverification" value="Mickey" style="text-align:right;">
   <br>
-  ЕА йяМо ущми йзяМщ зД Дщсъ©:<br>
-  <input type="checkbox" name="aboutmepage" value="aboutmepage">ДзЦ цяМо<br>
+  О©╫О©╫ О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫ О©╫О©╫ О©╫О©╫О©╫ъ©:<br>
+  <input type="checkbox" name="aboutmepage" value="aboutmepage">О©╫О©╫О©╫ О©╫О©╫О©╫О©╫<br>
   <br><br>
   <input type="submit" value="Submit">
   <br><br>
@@ -84,7 +84,7 @@ nav ul li {
 </html>
 
 <footer>
-<p>&copy; 2018 рго. лЦМз гАмчФч ЦмщФыи.</p>
+<p>&copy; 2018 О©╫О©╫О©╫. О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫.</p>
 </footer>
 
 </body>
