--- a/zad_items.html
+++ b/zad_items.html
@@ -1,69 +1,96 @@
-
-
- <!-- <!DOCTYPE html> -->
+<!-- <!DOCTYPE html> -->
 <html>
-   <head>
-      <title>zad items</title>
-      <link rel="stylesheet" type="text/css" href="style_item.css">
-      <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel='stylesheet'>
-   </head>
-   <body>
 
-      <div class="container">
-         <div class="header">
-            <div class="logo" > <img src="/Applications/XAMPP/xamppfiles/htdocs/my_auction/my_auction/img/nnn.png" style=" width: 62%;
-               height: auto; " align="middle" alt="logo"></div>
-            <div><input type="text" placeholder="Search" class="search_box"/></div>
-         </div>
-         <div class="menu">
-            <ul class="menu_list">
-              <li><a class="active" href="Home.php">جديد اليوم </a></li>
-               <li><a href="coffee.php">ستنتهي اليوم </a></li>
-               <li><a href="machines.php">اشتر الآن</a></li>
-            </ul>
-         </div>
-         <div class="products">
-          <ul class="list_product">
-          <li>
-         <a class="active" href="#">
-            <img src="/Applications/XAMPP/xamppfiles/htdocs/my_auction/my_auction/img/k.png" alt="img">
+<head>
+  <title>zad items</title>
+  <link rel="stylesheet" type="text/css" href="style_item.css">
+  <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
+  <link ref="stylesheet" href="style_item.css">
+</head>
+
+<body style="display: flex;height:100%;flex-direction:column">
+  <header class="navbar" style="max-height:15vh">
+    <div style="display:flex; margin:0 5px">
+      <img src="img/logo.png" alt="HTML5 Icon" style="max-height: 10vh;align-self:center">
+    </div>
+
+    <h2 style="flex:1; align-self:center"> زاد+ </h2>
+
+    <a style="align-self: center;padding:0 20px"> تسجيل دخول</a>
+    <a style="align-self: center;padding:0 20px">مساعدة</a>
+  </header>
+  <div style="flex:1" class="container">
+
+    <div class="menu">
+      <ul class="menu_list">
+        <li>
+          <a class="active" href="Home.php">جديد اليوم </a>
+        </li>
+        <li>
+          <a href="coffee.php">ستنتهي اليوم </a>
+        </li>
+        <li>
+          <a href="machines.php">اشتر الآن</a>
+        </li>
+      </ul>
+    </div>
+    <div class="products">
+      <ul class="list_product">
+        <li>
+          <a class="active" href="#">
+            <img src="img/k.png" alt="img">
             <p>طاولة طعام </p>
             <p class="price"> 300 SR</p>
             <hr>
-         <a href="#" class="cart"> إضافة للسلة <i class="fa fa-cart-arrow-down" aria-hidden="true"></i></a>
-         <a href="#" class="heart"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-         </a>
-      </li>
+            <a href="#" class="cart"> إضافة للسلة
+              <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="heart">
+              <i class="fa fa-heart-o" aria-hidden="true"></i>
+            </a>
+          </a>
+        </li>
 
 
         <li>
-         <a class="active" href="#">
-            <img src="/Applications/XAMPP/xamppfiles/htdocs/my_auction/my_auction/img/bag.jpg" alt="img">
+          <a class="active" href="#">
+            <img src="img/bag.jpg" alt="img">
             <p>حقيبة رجاليه</p>
             <p class="price"> 200 SR</p>
             <hr>
-         <a href="#" class="cart"> إضافة للسلة <i class="fa fa-cart-arrow-down" aria-hidden="true"></i></a>
-         <a href="#" class="heart"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-         </a>
-      </li>
+            <a href="#" class="cart"> إضافة للسلة
+              <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="heart">
+              <i class="fa fa-heart-o" aria-hidden="true"></i>
+            </a>
+          </a>
+        </li>
 
 
         <li>
-         <a class="active" href="#">
-            <img src="/Applications/XAMPP/xamppfiles/htdocs/my_auction/my_auction/img/lab.jpg" alt="img">
+          <a class="active" href="#">
+            <img src="img/lab.jpg" alt="img">
             <p>لابتوب</p>
             <p class="price"> 900 SR</p>
             <hr>
-         <a href="#" class="cart"> إضافة للسلة <i class="fa fa-cart-arrow-down" aria-hidden="true"></i></a>
-         <a href="#" class="heart"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-         </a>
-      </li>
+            <a href="#" class="cart"> إضافة للسلة
+              <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="heart">
+              <i class="fa fa-heart-o" aria-hidden="true"></i>
+            </a>
+          </a>
+        </li>
 
       </ul>
-      </div>
-<div class="footer"> 
-</div>
-</div>
+    </div>
+
+  </div>
+  <footer>
+    <p>&copy; 2018 زاد. جميع الحقوق محفوظة.</p>
+  </footer>
 </body>
+
 </html>
