--- a/zad_sign.html
+++ b/zad_sign.html
@@ -2,90 +2,115 @@
 <html lang=Ar>
 
 <head>
-<title> ีÝอษ วแสำฬํแ </title>
-<style>
-body {
-    font-family: Verdana,sans-serif;
-    font-size: 0.9em;
-
-}
-
-header, footer {
-    padding: 10px;
-    color: white;
-    background-color: red;
-style="text-align:center;"
-}
-
-
-nav ul {
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 5px;
-}
-</style>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="style_item.css" >
+    <title> ุตูุญุฉ ุงูุชุณุฌูู </title>
 </head>
 
 <body>
-<header>
-<img src="/Applications/XAMPP/xamppfiles/htdocs/my_auction/my_auction/img/logo.png" width="100" height="100">
-<h1>าวฯ</h1>
-</header>
+    <header style="display:flex">
+        <img src="img/logo.png" alt="HTML5 Icon" height="75" style="margin:10px">
+        <h1 style="margin:10px">ุฒุงุฏ</h1>
 
-<nav>
-<ul>
-  <li><b>ใสวศฺวสํ</b></li>
-  <li><b>วแฬฯํฯ</b></li>
-  <li><b>วแใÝึแษ</b></li>
-</ul>
-</nav>
+    </header>
 
-<!DOCTYPE html>
-<html lang=Ar>
-<body style="text-align:right;">
-สำฬํแ อำวศ ฬฯํฯ
-<br><br>
-<form action="/action_page.php">
-  วแวำใ วแรๆแ:<br>
-  <input type="text" name="firstname" value="รอใฯ" style="text-align:right;">
-  <br>
-  วแวำใ วแรฮํั:<br>
-  <input type="text" name="lastname" value="ใอใฯ" style="text-align:right;">
-  <br>
-  วำใ วแใำสฮฯใ:<br>
-  <input type="text" name="username" value="รอใฯ_ใอใฯ" style="text-align:right;">
-  <br>
-  วแลํใํแ:<br>
-  <input type="text" name="email" value="ahmed@ahmed.com" style="text-align:right;">
-  <br>
-  วแใฯํไษ:<br>
-  <input type="text" name="city" value="ใ฿ษ" style="text-align:right;">
-  <br>
-  ัÞใ วแฬๆวแ:<br>
-  <input type="text" name="mobilenum" value="1234567890" style="text-align:right;">
-  <br>
-  วแัÞใ วแำัํ:<br>
-  <input type="text" name="password" value="Mickey" style="text-align:right;">
-  <br>
-  สร฿ํฯ วแัÞใ วแำัํ:<br>
-  <input type="text" name="passwordverification" value="Mickey" style="text-align:right;">
-  <br>
-  ๅแ สัํฯ ีÝอษ สฺัํÝ ฺไ ไÝำ฿ฟ:<br>
-  <input type="checkbox" name="aboutmepage" value="aboutmepage">ไฺใ รัํฯ<br>
-  <br><br>
-  <input type="submit" value="Submit">
-  <br><br>
-</form> 
+
+    <!DOCTYPE html>
+    <html lang=Ar>
+
+    <body style="text-align:right;">
+
+
+        <nav class="menu_list" style="margin-bottom:20px;display:flex">
+
+
+            <div style="flex:8" class="dropdown-container">
+
+
+                <div style="line-height: 3;color:#FFF;margin:auto">
+                    ุชุณุฌูู ุฌุฏูุฏ
+                </div>
+
+            </div>
+            <div>
+
+            </div>
+        </nav>
+        <br>
+        <br>
+        <form action="/action_page.php" class="register_form">
+
+            <div>
+                <lable for="firstname">
+                    ุงูุงุณู… ุงูุฃูู:
+                </lable>
+                <input type="text" name="firstname" value="ุฃุญู…ุฏ" style="text-align:right;">
+
+            </div>
+
+            <div>
+                ุงูุงุณู… ุงูุฃุฎูุฑ:
+                <br>
+                <input type="text" name="firstname" value="ุฃุญู…ุฏ" style="text-align:right;">
+            </div>
+
+            <div>
+                ุงุณู… ุงูู…ุณุชุฎุฏู…:
+                <br>
+                <input type="text" name="firstname" value="ุฃุญู…ุฏ" style="text-align:right;">
+            </div>
+
+
+            <div>
+                ุงูุจุฑูุฏ ุงูุฅููุชุฑููู:
+                <br>
+                <input type="email" name="firstname" value="ุฃุญู…ุฏ" style="text-align:right;">
+            </div>
+
+            <div>
+                ุงูู…ุฏููุฉ:
+                <br>
+                <input type="text" name="firstname" value="ู…ูุฉ" style="text-align:right;">
+            </div>
+
+            <div>
+                ุงูุงุณู… ุงูุฃุฎูุฑ:
+                <br>
+                <input type="number" name="firstname" value="ุฃุญู…ุฏ" style="text-align:right;">
+            </div>
+
+            <div>
+                ุงูุฑูู… ุงูุณุฑู:
+                <br>
+                <input type="password" name="firstname" value="ุฃุญู…ุฏ" style="text-align:left;">
+            </div>
+
+            <div>
+                ุชุฃููุฏ ุงูุฑูู… ุงูุณุฑู:
+                <br>
+                <input type="password" name="firstname" value="ุฃุญู…ุฏ" style="text-align:left;">
+            </div>
+
+
+            <div style="margin-top:20px">
+                <fieldset>
+                    <legend> ูู ุชุฑูุฏ ุตูุญุฉ ุชุนุฑูู ุนู ููุณู </legend>
+
+                    <input type="checkbox" name="aboutmepage" value="aboutmepage" style="width:auto">
+                    <label for="aboutmepage">ูุนู… ุฃุฑูุฏ</label>
+                </fieldset>
+            </div>
+
+
+            <input type="submit" value="ุชุณุฌูู" style="margin:10px auto">
+        </form>
+
+    
+
+    <footer>
+        <p>&copy; 2018 ุฒุงุฏ. ุฌู…ูุน ุงูุญููู ู…ุญููุธุฉ.</p>
+    </footer>
 
 </body>
-</html>
 
-<footer>
-<p>&copy; 2018 าวฯ. ฬใํฺ วแอÞๆÞ ใอÝๆูษ.</p>
-</footer>
-
-</body>
 </html>
