--- a/zad_item_buy.html
+++ b/zad_item_buy.html
@@ -110,14 +110,7 @@
                             الأقسام: الالكترونيات
                         </div>
                         <div style="font-size:1.25rem">
-                            <div><strike>السعر الابتدائي: ٧٠٠ ريال</strike></div>
-                            <div>السعر الحالي: ٨٥٠ ريال</div>
-                        </div>
-                        <div>
-                            تاريخ المزاد
-                            <div style="display:inline-block;padding:5px;border:1px solid red">
-                                5days : 34 minutes : 55 seconds
-                            </div>
+                            <div>السعر : ٨٥٠ ريال</div>
                         </div>
                     </div>
 
@@ -125,9 +118,7 @@
                 </div>
                 <hr >
                 <div class="submit_bid">
-                    <span style="font-size: 2rem">زد الآن</span>
-                    <input style="font-size:1.25rem" placeholder="القيمة" />
-                    <button class="bid_btn">إرسال</button>
+                    <button class="bid_btn">شراء</button>
                 </div>
             </div>
             <div style="flex:1">
